--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
         </div>
     </div>
 
-<div id="controls">
     <button onclick="startTimer()">Start</button>
     <button onclick="stopTimer()">Stop</button>
     <button onclick="resetTimer()">Reset</button>
@@ -116,7 +115,6 @@
     <button onclick="adjustTime(40)">+40 sec</button>
     <button onclick="adjustTime(50)">+50 sec</button>
     <button onclick="adjustTime(-20)">-20 sec</button>
-</div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -141,14 +139,14 @@
             selectedRef.on("value", snapshot => {
                 document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
                 if (snapshot.exists()) {
-                    document.querySelector(#timerBox${snapshot.val()}).classList.add("selected");
+                    document.querySelector(`#timerBox${snapshot.val()}`).classList.add("selected");
                 }
             });
 
             window.adjustTime = function(amount) {
                 selectedRef.get().then(snapshot => {
                     if (snapshot.exists()) {
-                        let timerKey = timer${snapshot.val()};
+                        let timerKey = `timer${snapshot.val()}`;
                         timerRef.child(timerKey).get().then(timeSnap => {
                             let time = timeSnap.exists() ? timeSnap.val() : 60;
                             time += amount;
@@ -162,7 +160,7 @@
             window.startTimer = function() {
                 selectedRef.get().then(snapshot => {
                     if (snapshot.exists()) {
-                        let timerKey = timer${snapshot.val()};
+                        let timerKey = `timer${snapshot.val()}`;
 
                         if (intervals[timerKey]) {
                             return;
@@ -187,7 +185,7 @@
             window.stopTimer = function() {
                 selectedRef.get().then(snapshot => {
                     if (snapshot.exists()) {
-                        let timerKey = timer${snapshot.val()};
+                        let timerKey = `timer${snapshot.val()}`;
                         if (intervals[timerKey]) {
                             clearInterval(intervals[timerKey]);
                             intervals[timerKey] = null;
@@ -214,8 +212,8 @@
 const teamRef = database.ref('teams');
 
 window.editTeamName = function(teamNumber) {
-    let display = document.getElementById(displayTeam${teamNumber});
-    let input = document.getElementById(team${teamNumber});
+    let display = document.getElementById(`displayTeam${teamNumber}`);
+    let input = document.getElementById(`team${teamNumber}`);
     display.style.display = "none";
     input.style.display = "block";
     input.value = display.textContent;
@@ -223,11 +221,11 @@ window.editTeamName = function(teamNumber) {
 };
 
 window.saveTeamName = function(teamNumber) {
-    let display = document.getElementById(displayTeam${teamNumber});
-    let input = document.getElementById(team${teamNumber});
+    let display = document.getElementById(`displayTeam${teamNumber}`);
+    let input = document.getElementById(`team${teamNumber}`);
     if (input.value.trim() !== "") {
         display.textContent = input.value;
-        teamRef.child(team${teamNumber}).set(input.value);  // Opslaan in Firebase
+        teamRef.child(`team${teamNumber}`).set(input.value);  // Opslaan in Firebase
     }
     input.style.display = "none";
     display.style.display = "block";
@@ -239,7 +237,7 @@ teamRef.on("value", snapshot => {
         let data = snapshot.val();
         Object.keys(data).forEach(key => {
             let teamNumber = key.replace("team", "");
-            let display = document.getElementById(displayTeam${teamNumber});
+            let display = document.getElementById(`displayTeam${teamNumber}`);
             if (display) {
                 display.textContent = data[key];
             }
@@ -247,20 +245,6 @@ teamRef.on("value", snapshot => {
     }
 });
         });
-
-// ✅ Controleer of de URL '?view=display' bevat
-function hideControlsIfNeeded() {
-    const urlParams = new URLSearchParams(window.location.search);
-    const viewMode = urlParams.get("view");
-
-    if (viewMode === "display") {
-        document.getElementById("controls").style.display = "none"; // Verberg knoppen
-    }
-}
-
-// ✅ Roep deze functie aan zodra de pagina geladen is
-document.addEventListener("DOMContentLoaded", hideControlsIfNeeded);
-
     </script>
 </body>
 </html>
