--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <button onclick="stopTimer()">Stop</button>
     <button onclick="resetTimer()">Reset</button>
     <button onclick="adjustTime(10)">+10 sec</button>
+    <button onclick="adjustTime(15)">+15 sec</button>
     <button onclick="adjustTime(20)">+20 sec</button>
     <button onclick="adjustTime(30)">+30 sec</button>
     <button onclick="adjustTime(40)">+40 sec</button>
